--- a/windowsshutdownmenu_pi.html
+++ b/windowsshutdownmenu_pi.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <title>com.krabs.windowsshutdownmenu PI</title>
     <link rel="stylesheet" href="resources/scripts/sdpi.css">
+    <script src="resources/scripts/sdtools.common.js"></script>
+    <link rel="stylesheet" href="resources/scripts/rangeTooltip.css">
+    <script src="resources/scripts/rangeTooltip.js"></script>
 </head>
 
 <body>
