--- a/windowsshutdownmenu.html
+++ b/windowsshutdownmenu.html
@@ -61,6 +61,17 @@
                     };
                     websocket.send(JSON.stringify(vjson));
                   }
+                  else if ( vDevice === device && vDeviceType === 1 ) {
+                  var vjson = {
+                    'event': 'switchToProfile',
+                    'context': pluginUUID,
+                    'device': device,
+                    'payload': {
+                        'profile': "resources/profiles/Windows Shutdown Menu Mini",
+                      },
+                    };
+                    websocket.send(JSON.stringify(vjson));
+                  }
               }
             }
 
